--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,10 @@
             <artifactId>jave-nativebin-win64</artifactId>
             <version>2.7.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
 
     </dependencies>
     <dependencyManagement>
